--- a/pcso-lotto-and-games/How-to-Franchise-Jollibee-in-the-Philippines.html
+++ b/pcso-lotto-and-games/How-to-Franchise-Jollibee-in-the-Philippines.html
@@ -322,6 +322,17 @@ function closeNav() {
     <a href=""><img src="../images/6-58-how.png" alt="Does God Know the Exact Day I Will Die?" style="width:100%"></a></div>
     <div style=" width:60%; float:left;"><p><a href="" class="sp">How to Franchise Mang Inasal?</a></p></div>
     </div>
+	    <div style="width:100%; height:100px; border-top:1px solid #ccc;">
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- Ad90 -->
+    <ins class="adsbygoogle"
+    style="display:inline-block;width:100%;max-width:728px;height:90px; margin:auto"
+    data-ad-client="ca-pub-8489405167836126"
+    data-ad-slot="5953369141"></ins>
+    <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+    </div>
     <div style="width:100%; height:100px; border-top:1px solid #ccc;">
     <div style="width:40%; padding:16px; float:left;">
     <a href=""><img src="../images/6-58-how.png" alt="Does God Know the Exact Day I Will Die?" style="width:100%"></a></div>
