--- a/pcso-lotto-and-games/woff-font4.html
+++ b/pcso-lotto-and-games/woff-font4.html
@@ -102,7 +102,7 @@ h1,h2,h3,h4,h5, p{padding:0 20px 0 20px} li{padding-right:20px;}
 @font-face {font-family:TFont; src: url(../../poppins-v5-latin-700.woff);}
 @media (max-width:600px){.hide-s {display:none!important}}
 @media (max-width:992px) and (min-width:601px){.hide-m{display:none!important} .half{width:49.99999%!important} .date{font-size:13px}}
-@media (min-width:601px){.half.left{padding-right:11px}.half.right{padding-left:11px}}
+@media (min-width:601px){p{font-size:23px}.half.left{padding-right:11px}.half.right{padding-left:11px}}
 </style>
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script>
@@ -260,31 +260,31 @@ h1,h2,h3,h4,h5, p{padding:0 20px 0 20px} li{padding-right:20px;}
     </main></div><aside class="side"><br><br class="hide-s"><div style="overflow:hidden; text-align:center;"> <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle" style="display:inline-block;width:300px;height:250px" data-ad-client="ca-pub-8489405167836126" data-ad-slot="3410087315"></ins> <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script><a style="color:#a6a6a6; display:block">advertisement</a></div><br>
     
 <!-- Related Articles --> <div style="background:#f2f2f2; width:100%;"><p class="ff" style="padding:5px; padding-top:8px; font-size:16px; text-transform:uppercase; text-align:center; letter-spacing:6px"><b>&nbsp;Related Articles</b></p></div><div class="row fcolor related" style="width:100%; max-width:450px; margin:auto"><br>
-<!-- Article 1 --><div><a href="" ><img src="../../images/Sample.jpg" alt="Avatar" style="width:100%; height:270px"></a>
+<!-- Article 1 --><div><a href="" ><img src="../../images/abcd.jpg" alt="Avatar" style="width:100%; height:270px"></a>
     <div style="padding-left:16px;padding-right:16px"><div class="over"><p><a class="ATitle" href="">Have I Really Forgiven Someone If I Keep Remembering Their Wrong?</a><p class="ADate">APR 1, 2018</p>
     <div style="padding:0 0 16px 21px; float:left"><img src="../../images/Spicy-Ginataang-Hipon.jpg" alt="How to" class="APhoto"><p class="AAuthor">Joy Daniel Mamparo</p></div></p><br></div></div><br><br></div>
-<!-- Article 1 --><div><a href="" ><img src="../../images/Sample.jpg" alt="Avatar" style="width:100%; height:270px"></a>
+<!-- Article 1 --><div><a href="" ><img src="../../images/abcd.jpg" alt="Avatar" style="width:100%; height:270px"></a>
     <div style="padding-left:16px;padding-right:16px"><div class="over"><p><a class="ATitle" href="">Have I Really Forgiven Someone If I Keep Remembering Their Wrong?</a><p class="ADate">APR 1, 2018</p>
     <div style="padding:0 0 16px 21px; float:left"><img src="../../images/Spicy-Ginataang-Hipon.jpg" alt="How to" class="APhoto"><p class="AAuthor">Joy Daniel Mamparo</p></div></p><br></div></div><br><br></div>
-<!-- Article 1 --><div><a href="" ><img src="../../images/Sample.jpg" alt="Avatar" style="width:100%; height:270px"></a>
+<!-- Article 1 --><div><a href="" ><img src="../../images/abcd.jpg" alt="Avatar" style="width:100%; height:270px"></a>
     <div style="padding-left:16px;padding-right:16px"><div class="over"><p><a class="ATitle" href="">Have I Really Forgiven Someone If I Keep Remembering Their Wrong?</a><p class="ADate">APR 1, 2018</p>
     <div style="padding:0 0 16px 21px; float:left"><img src="../../images/Spicy-Ginataang-Hipon.jpg" alt="How to" class="APhoto"><p class="AAuthor">Joy Daniel Mamparo</p></div></p><br></div></div><br><br></div>
-<!-- Article 1 --><div><a href="" ><img src="../../images/Sample.jpg" alt="Avatar" style="width:100%; height:270px"></a>
+<!-- Article 1 --><div><a href="" ><img src="../../images/abcd.jpg" alt="Avatar" style="width:100%; height:270px"></a>
     <div style="padding-left:16px;padding-right:16px"><div class="over"><p><a class="ATitle" href="">Have I Really Forgiven Someone If I Keep Remembering Their Wrong?</a><p class="ADate">APR 1, 2018</p>
     <div style="padding:0 0 16px 21px; float:left"><img src="../../images/Spicy-Ginataang-Hipon.jpg" alt="How to" class="APhoto"><p class="AAuthor">Joy Daniel Mamparo</p></div></p><br></div></div><br><br></div>
-<!-- Article 1 --><div><a href="" ><img src="../../images/Sample.jpg" alt="Avatar" style="width:100%; height:270px"></a>
+<!-- Article 1 --><div><a href="" ><img src="../../images/abcd.jpg" alt="Avatar" style="width:100%; height:270px"></a>
     <div style="padding-left:16px;padding-right:16px"><div class="over"><p><a class="ATitle" href="">Have I Really Forgiven Someone If I Keep Remembering Their Wrong?</a><p class="ADate">APR 1, 2018</p>
     <div style="padding:0 0 16px 21px; float:left"><img src="../../images/Spicy-Ginataang-Hipon.jpg" alt="How to" class="APhoto"><p class="AAuthor">Joy Daniel Mamparo</p></div></p><br></div></div><br><br></div>
-<!-- Article 1 --><div><a href="" ><img src="../../images/Sample.jpg" alt="Avatar" style="width:100%; height:270px"></a>
+<!-- Article 1 --><div><a href="" ><img src="../../images/abcd.jpg" alt="Avatar" style="width:100%; height:270px"></a>
     <div style="padding-left:16px;padding-right:16px"><div class="over"><p><a class="ATitle" href="">Have I Really Forgiven Someone If I Keep Remembering Their Wrong?</a><p class="ADate">APR 1, 2018</p>
     <div style="padding:0 0 16px 21px; float:left"><img src="../../images/Spicy-Ginataang-Hipon.jpg" alt="How to" class="APhoto"><p class="AAuthor">Joy Daniel Mamparo</p></div></p><br></div></div><br><br></div>
-<!-- Article 1 --><div><a href="" ><img src="../../images/Sample.jpg" alt="Avatar" style="width:100%; height:270px"></a>
+<!-- Article 1 --><div><a href="" ><img src="../../images/abcd.jpg" alt="Avatar" style="width:100%; height:270px"></a>
     <div style="padding-left:16px;padding-right:16px"><div class="over"><p><a class="ATitle" href="">Have I Really Forgiven Someone If I Keep Remembering Their Wrong?</a><p class="ADate">APR 1, 2018</p>
     <div style="padding:0 0 16px 21px; float:left"><img src="../../images/Spicy-Ginataang-Hipon.jpg" alt="How to" class="APhoto"><p class="AAuthor">Joy Daniel Mamparo</p></div></p><br></div></div><br><br></div>
-<!-- Article 1 --><div><a href="" ><img src="../../images/Sample.jpg" alt="Avatar" style="width:100%; height:270px"></a>
+<!-- Article 1 --><div><a href="" ><img src="../../images/abcd.jpg" alt="Avatar" style="width:100%; height:270px"></a>
     <div style="padding-left:16px;padding-right:16px"><div class="over"><p><a class="ATitle" href="">Have I Really Forgiven Someone If I Keep Remembering Their Wrong?</a><p class="ADate">APR 1, 2018</p>
     <div style="padding:0 0 16px 21px; float:left"><img src="../../images/Spicy-Ginataang-Hipon.jpg" alt="How to" class="APhoto"><p class="AAuthor">Joy Daniel Mamparo</p></div></p><br></div></div><br><br></div>
-<!-- Article 1 --><div><a href="" ><img src="../../images/Sample.jpg" alt="Avatar" style="width:100%; height:270px"></a>
+<!-- Article 1 --><div><a href="" ><img src="../../images/abcd.jpg" alt="Avatar" style="width:100%; height:270px"></a>
     <div style="padding-left:16px;padding-right:16px"><div class="over"><p><a class="ATitle" href="">Have I Really Forgiven Someone If I Keep Remembering Their Wrong?</a><p class="ADate">APR 1, 2018</p>
     <div style="padding:0 0 16px 21px; float:left"><img src="../../images/Spicy-Ginataang-Hipon.jpg" alt="How to" class="APhoto"><p class="AAuthor">Joy Daniel Mamparo</p></div></p><br></div></div><br><br></div>
 <div style="overflow:hidden; margin-top:45px; margin-bottom:30px; text-align:center;"> <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle" style="display:inline-block;width:300px;height:250px" data-ad-client="ca-pub-8489405167836126" data-ad-slot="3410087315"></ins> <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script><a style="color:#a6a6a6; display:block">advertisement</a></div></div></aside></div>
