--- a/pcso-lotto-and-games/bago-woff.html
+++ b/pcso-lotto-and-games/bago-woff.html
@@ -10,6 +10,13 @@
 <meta property="article:tag" content="liver function" />
 <meta property="article:tag" content="potassium rich foods" />
 <meta property="article:tag" content="what does the liver do" />
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-8489405167836126",
+    enable_page_level_ads: true
+  });
+</script>	
 <style>
 *{box-sizing:border-box;margin:0}html,body,.psize,a{font-family:Arial;font-weight:300;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%}.share{width:35px;height:35px}.share:hover{width:40px;height:40px;}
 h2,h3,h4,.title{-webkit-text-stroke:1.5px #1a1a1a;font-weight:300;letter-spacing:.5px;font-size:27px;line-height:1.3; -webkit-margin-before:10px;-webkit-margin-after:8px}
