--- a/pcso-lotto-and-games/bago-woff.html
+++ b/pcso-lotto-and-games/bago-woff.html
@@ -18,14 +18,14 @@
   });
 </script>
 <style>
-*{box-sizing:border-box;margin:0}html,body,.psize,a{font-family:Arial;font-weight:300;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%}.share{width:35px;height:35px}.share:hover{width:40px;height:40px;}
+*{box-sizing:border-box;margin:0}html,body,.psize,a,p{font-family:Tahoma, Geneva, sans-serif;font-weight:300;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%}.share{width:35px;height:35px}.share:hover{width:40px;height:40px;}
 h2,h3,h4,.title{font-weight:400;letter-spacing:-3.5px;font-size:30px;line-height:1.3;-webkit-margin-before:10px;-webkit-margin-after:8px}
 h1,h2,h3,h4,.title{font-family:Courier New;padding:0 16px;color:#1a1a1a;}h1{font-weight:300;font-size:47px;color:#fff;text-shadow:0 0 1px rgba(0,0,0,0.12),0 1px 1px rgba(0,0,0,0.24),0 0 1px rgba(0,0,0,0.12),0 1px 1px rgba(0,0,0,0.24)}
-p,.psize{-webkit-text-stroke:.3px #000;letter-spacing:.5px;font-size:17px;line-height:1.6;padding:8px 16px;color:000}a{text-decoration:none;color:#3079ED}footer p,footer a{color:#626567;font-size:14px;padding:0 0 0 30px;display:inline-block}
-@media (max-width:600px){h1{line-height:1.1;padding:0px 5px;margin-top:-8px;padding:10px 16px}}.HTitleBox{height:}li{padding:2px 20px 2px 0}#navbar a{color:white;font-size:20px}#navbar{padding:5px 25px 0 10px;z-index:4;height:60px;top:-80px;}
+p,.psize{letter-spacing:.5px;font-size:17px;line-height:1.6;padding:8px 16px;color:000}a{text-decoration:none;color:#3079ED}footer p,footer a{color:#626567;font-size:14px;padding:0 0 0 30px;display:inline-block}
+@media (max-width:600px){p{-webkit-text-stroke:.3px #000;}h1{line-height:1.1;padding:0px 5px;margin-top:-8px;padding:10px 16px}}.HTitleBox{height:}li{padding:2px 20px 2px 0}#navbar a{color:white;font-size:20px}#navbar{padding:5px 25px 0 10px;z-index:4;height:60px;top:-80px;}
 @media (max-width:900px)and(min-width:601px){.HTitleBox{padding-left:16px}h1{padding:30px 30px 5px 30px}}
 @media (min-width:601px){h1{padding:40px 0}}nav{width:100%}.sidenav a{display:block;padding:10px 0 10px 12%;font-size:16px;color:#404040}
-@media (min-width:901px){#navbar{height:70px;top:-70px;}}
+@media (min-width:901px){#navbar{height:70px;top:-70px;}p{font-size:21px}}
 .box a{font-size:19px;padding:15px 16px;color:#8E24AA;display:block;border-top:1px solid #ccc} strong{font-weight:300}
 .text b{font-family:TFont;letter-spacing:-.3px;padding:0;font-size:17.5px}
 .Ingredients{border-bottom:dotted 1px #626567; padding:30px 16px}.Directions{padding:12px 16px}.Recipe{padding:0 20px}.Recipe h3{padding:0;border-bottom:2px solid #1a1a1a}.RP{display:inline-block;font-size:14px;float:left;width:60%;border-bottom:dotted 1px #626567;padding: 3px 0 3px 0}.RP b,.unit b, .RP{-webkit-text-stroke:0;font-size:14px;letter-spacing:.8px}
