--- a/pcso-lotto-and-games/bago-woff.html
+++ b/pcso-lotto-and-games/bago-woff.html
@@ -10,13 +10,6 @@
 <meta property="article:tag" content="liver function" />
 <meta property="article:tag" content="potassium rich foods" />
 <meta property="article:tag" content="what does the liver do" />
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-  (adsbygoogle = window.adsbygoogle || []).push({
-    google_ad_client: "ca-pub-8489405167836126",
-    enable_page_level_ads: true
-  });
-</script>
 <style>
 *{box-sizing:border-box;margin:0}html,body,.psize,a,p{font-family:Tahoma, Geneva, sans-serif;font-weight:300;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%}.share{width:35px;height:35px}.share:hover{width:40px;height:40px;}
 h2,h3,h4,.title{font-weight:400;letter-spacing:-3.5px;font-size:30px;line-height:1.3;-webkit-margin-before:10px;-webkit-margin-after:8px}
@@ -70,7 +63,15 @@ function scrollFunction() {if (document.body.scrollTop > 90 || document.document
     <p class="Ingredients">8 cloves garlic, crushed</p>
     <p class="Ingredients">1 teaspoon salt</p>
     <p class="Ingredients" style="border-bottom:none">2 ½ - 3 tablespoons cooking oil</p></div></div>
-    
+    <div style="text-align:center"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Xs -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:300px;height:250px"
+     data-ad-client="ca-pub-8489405167836126"
+     data-ad-slot="3410087315"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script></div>
     <div class="row"><div class="hide-s AdBox" style="margin:10px 20px 0 0;float:left"></div>
     <div class="Text" style="display:inline-block">
     <h3 style="margin:30px 0 30px 0">Directions</h3>
@@ -83,6 +84,15 @@ function scrollFunction() {if (document.body.scrollTop > 90 || document.document
     <p class="Directions">Turn-off the heat and transfer to a serving bowl.</p>
     <p class="Directions">Serve. Share and enjoy!</p></div></div>
     </div><br></div>
+	<div style="text-align:center"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Xs -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:300px;height:250px"
+     data-ad-client="ca-pub-8489405167836126"
+     data-ad-slot="3410087315"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script></div>
     <div style="background:#3079ED;padding:30px 36px;position:sticky;top:55px"><div style="width:100%;max-width:900px;margin:auto"><a href="" style="color:#BBDEFB;font-size:18px">Next<br><span style="color:#fff;font-size:21px">How to Franchise McDonald's &#10141;</span></a></div></div>
 	<div class="box"style="background:#f2f2f2;padding:19px"><br><div style="width:100%;max-width:900px;margin:auto"><p style="font-size:17px;color:#626567">Recommended read</p><br>
 	<a href="" style="border:none">How to Franchise McDonal's</a>
